Fix CI, tests, docs build of the plugin-branch (#348)
* Change python versions to strings in CI workflows

* Remove conda python<3.11 pin.

* Moved abstract model to base/model.py

* Refactor models folder to file

* Refactor forcing. Default to base, rest to forcing.py

* Remove parametersetdb.ParameterSet

* Move case sensitive config parser to util.py

* Removed parametersetdb. Still used parts moved.

* Refactored forcing sources, ewc/forcing.py.

* Fix DefaultForc test, get name from __fields__

* Add type hinting to forcing sources

* Fix src/ tests

* Fix plugin tests

* Apply linters: black, isort.

* Remove python 3.11

* Fix setup-cfg-fmt issue

* Fix pre-commit. Removed `setup-cfg-fmt`: incompatible w/ Py3.10

* Silence sonarcloud false positive

* Add new github downloader

* Fix pcrglob test, parameterset tests

* Please linters

* Add RTD config file

* Add pydantic to docs requirements

* Update conf.py and docs/requirements.txt to fix docs

* Bump CI actions/checkout to v3.

* pre-commit

* Make SonarCloud happy

* Fix docs: move to sphinx-autoapi

* Make yamllint happy

* Removed skipped tests from parameter_sets/test_example.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,6 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.10
-    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: GIS
     Topic :: Scientific/Engineering :: Hydrology
@@ -53,7 +52,7 @@ install_requires =
     ruamel.yaml
     scipy
     xarray
-python_requires = >=3.8
+python_requires = >=3.10
 package_dir =
     = src
 zip_safe = False
@@ -62,6 +61,12 @@ zip_safe = False
 where = src
 
 [options.entry_points]
+ewatercycle.forcings =
+    HypeForcing = ewatercycle.plugins.hype.forcing:HypeForcing
+    LisfloodForcing = ewatercycle.plugins.lisflood.forcing:LisfloodForcing
+    MarrmotForcing = ewatercycle.plugins.marrmot.forcing:MarrmotForcing
+    PCRGlobWBForcing = ewatercycle.plugins.pcrglobwb.forcing:PCRGlobWBForcing
+    WflowForcing = ewatercycle.plugins.wflow.forcing:WflowForcing
 ewatercycle.models =
     Hype = ewatercycle.plugins.hype.model:Hype
     Lisflood = ewatercycle.plugins.lisflood.model:Lisflood
@@ -69,13 +74,7 @@ ewatercycle.models =
     PCRGlobWB = ewatercycle.plugins.pcrglobwb.model:PCRGlobWB
     MarrmotM01 = ewatercycle.plugins.marrmot.model:MarrmotM01
     MarrmotM14 = ewatercycle.plugins.marrmot.model:MarrmotM14
-ewatercycle.forcings =
-    HypeForcing = ewatercycle.plugins.hype.forcing:HypeForcing
-    LisfloodForcing = ewatercycle.plugins.lisflood.forcing:LisfloodForcing
-    MarrmotForcing = ewatercycle.plugins.marrmot.forcing:MarrmotForcing
-    PCRGlobWBForcing = ewatercycle.plugins.pcrglobwb.forcing:PCRGlobWBForcing
-    WflowForcing = ewatercycle.plugins.wflow.forcing:WflowForcing
-ewatercycle.parameter_sets = 
+ewatercycle.parameter_sets =
     lisflood_fraser = ewatercycle.plugins.lisflood.parameter_sets:lisflood_fraser
     pcrglobwb_rhinemeuse_30min = ewatercycle.plugins.pcrglobwb.parameter_sets:pcrglobwb_rhinemeuse_30min
     wflow_rhine_sbm_nc = ewatercycle.plugins.wflow.parameter_sets:wflow_rhine_sbm_nc
@@ -88,6 +87,7 @@ dev =
     deepdiff
     ipython
     isort
+    mypy
     nbsphinx
     pre-commit>=2.15.0
     pycodestyle
@@ -97,9 +97,9 @@ dev =
     recommonmark
     sphinx
     sphinx-copybutton
-    sphinx_rtd_theme
+    sphinx-rtd-theme
+    sphinx-autoapi
     twine
-    mypy
     types-python-dateutil
 
 [options.package_data]
