--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,5 +2,5 @@ ipython
 nbsphinx
 ruamel.yaml
 sphinx-copybutton
-# TODO workaround till https://github.com/jupyter/nbconvert/issues/1736 is fixed
-jinja2<3.1.0
+jinja2
+sphinx-autoapi
