Pin to pytdantic v1

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ install_requires =
     matplotlib>=3.5.0
     numpy
     pandas
-    pydantic
+    pydantic==1.*
     pyoos
     python-dateutil
     ruamel.yaml
