Replace num2date with new num2pydate + return proper dataarray + dont flip shape in wflow

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ install_requires =
     Fiona
     Shapely
     bmipy
-    cftime
+    cftime>=1.6.2
     esmvaltool>=2.4.0
     gitdir
     grpc4bmi>=0.4.0
