Update outdated docs (#353)
* Nest hpc2cluster docs

* Fix and run user guide until model.setup()

* typo

* Add docstrings to forcing sources + generate()

* Add docstrings to parameter sets and models

* Need rich to run notebooks in docs/

* Write updated recipe to disk before running

* Stuck on model run

* Swap get_grid_x / get_grid_y for wflow and pcrglobwb

Refs #353

* Pin to pytdantic v1

* Started writing tests for container module

* Wflow.bmi has x=lon, y=lat now, so swap is no longer needed elsewhere

* Use proper flip

* Replace num2date with new num2pydate + return proper dataarray + dont flip shape in wflow

* Ran user guide OK completly + added get_value_at_coords example

* Improve apidocs

* Moved model specific notebooks to docs/plugin/<model>/

* Make plugin docs browsable and consistent

* Mostly theoretical fix of plugin notebooks

* Irrigation experiment only uses pcrglob so move to plugin

* ewatercylce docs should link to docs of the known/official plugins

* Show inheritance of sub classes

* Fix tests

* Format

* Fix tests take 2

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ install_requires =
     Fiona
     Shapely
     bmipy
-    cftime
+    cftime>=1.6.2
     esmvaltool>=2.4.0
     gitdir
     grpc4bmi>=0.4.0
@@ -46,7 +46,7 @@ install_requires =
     matplotlib>=3.5.0
     numpy
     pandas
-    pydantic
+    pydantic==1.*
     pyoos
     python-dateutil
     ruamel.yaml
@@ -94,6 +94,7 @@ dev =
     pytest
     pytest-cov
     pytest-runner
+    rich
     recommonmark
     sphinx
     sphinx-copybutton
