further fixes to forcing

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ install_requires =
     matplotlib>=3.5.0
     numpy
     pandas
-    pydantic==1.*
+    pydantic>=2
     pyoos
     python-dateutil
     ruamel.yaml
