More fixes - very confused by https://docs.pydantic.dev/2.0/migration/#defining-custom-types

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,7 +69,7 @@ repos:
     rev: v1.4.1
     hooks:
       - id: mypy
-        additional_dependencies: [types-python-dateutil, pydantic]
+        additional_dependencies: [types-python-dateutil, pydantic, types-PyYAML]
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.1.0
     hooks:
