--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,10 +66,10 @@ repos:
         verbose: true
         args: &fa [--statistics, --exit-zero]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.1.1
+    rev: v1.4.1
     hooks:
       - id: mypy
-        additional_dependencies: [types-python-dateutil, pydantic]
+        additional_dependencies: [types-python-dateutil, pydantic, types-PyYAML]
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.1.0
     hooks:
