--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
+    exclude: ^(.*/)?\.svg$
   - repo: https://github.com/adrienverge/yamllint
     rev: "v1.29.0"
     hooks:
