Revert "Remove plugin files and entrypoints"
This reverts commit 4bc29ce899333e8e525897f5a2803783af28dc3e.

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,25 @@ zip_safe = False
 [options.packages.find]
 where = src
 
+[options.entry_points]
+ewatercycle.forcings =
+    HypeForcing = ewatercycle.plugins.hype.forcing:HypeForcing
+    LisfloodForcing = ewatercycle.plugins.lisflood.forcing:LisfloodForcing
+    MarrmotForcing = ewatercycle.plugins.marrmot.forcing:MarrmotForcing
+    PCRGlobWBForcing = ewatercycle.plugins.pcrglobwb.forcing:PCRGlobWBForcing
+    WflowForcing = ewatercycle.plugins.wflow.forcing:WflowForcing
+ewatercycle.models =
+    Hype = ewatercycle.plugins.hype.model:Hype
+    Lisflood = ewatercycle.plugins.lisflood.model:Lisflood
+    Wflow = ewatercycle.plugins.wflow.model:Wflow
+    PCRGlobWB = ewatercycle.plugins.pcrglobwb.model:PCRGlobWB
+    MarrmotM01 = ewatercycle.plugins.marrmot.model:MarrmotM01
+    MarrmotM14 = ewatercycle.plugins.marrmot.model:MarrmotM14
+ewatercycle.parameter_sets =
+    lisflood_fraser = ewatercycle.plugins.lisflood.parameter_sets:lisflood_fraser
+    pcrglobwb_rhinemeuse_30min = ewatercycle.plugins.pcrglobwb.parameter_sets:pcrglobwb_rhinemeuse_30min
+    wflow_rhine_sbm_nc = ewatercycle.plugins.wflow.parameter_sets:wflow_rhine_sbm_nc
+
 [options.extras_require]
 dev =
     black[jupyter]
