--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2.0.0
+current_version = 2.0.0b1
 
 [bumpversion:file:src/ewatercycle/version.py]
 search = __version__ = "{current_version}"
