--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -14,14 +14,11 @@ jobs:
         with:
           fetch-depth: 0
       - name: Set up Python
-        uses: conda-incubator/setup-miniconda@v2
+        uses: mamba-org/setup-micromamba@v1
         with:
-          activate-environment: ewatercycle
           environment-file: environment.yml
-          mamba-version: "*"
-          python-version: "3.10"
-          miniconda-version: "latest"
-          channels: conda-forge
+          cache-environment: true
+          init-shell: bash
       - name: Install dependencies
         shell: bash -l {0}
         run: |
