--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,5 @@ name: ewatercycle
 channels:
   - conda-forge
 dependencies:
-  - python==3.10
+  - python=3.10
   - esmvaltool-python>=2.3.0
-  # Pin esmpy so we dont get forced to run all parallel tasks on single cpu
-  # Can be removed once
-  # https://github.com/ESMValGroup/ESMValCore/issues/1208 is resolved.
-  - esmpy!=8.1.0,<8.4
