should be `types-requests`

--- a/setup.cfg
+++ b/setup.cfg
@@ -84,7 +84,7 @@ dev =
     twine
     types-python-dateutil
     types-PyYAML
-    types-request
+    types-requests
 
 [options.package_data]
 ewatercycle =
