--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,11 @@ repos:
       - id: check-case-conflict
       - id: check-merge-conflict
       - id: debug-statements
+      - id: end-of-file-fixer
+        exclude:
+             (?x)^(
+                 tests/src/base/forcing_files/camels_03439000.*
+              )$
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
   - repo: https://github.com/adrienverge/yamllint
