Adding caravan forcing (#407)
* adding caravan forcing class.

* forgot to pass basin_id correctly

* wrong path

* specifiy output path for extraction

* wrong var_name path

* replacing geopandas and wget

* adding lat/lon to dimensions based on shape

* issue with to_array(), should be to_numpy()

* wrong dataset

* wrong dataset ref

* move basin properties to coordinates

* Visual tweaks based on sonarcloud feedback

* change intersection to union

* back to intersection, change order

* add rename era5 dict for now

* also rename variables tuple

* add example

* running pre-commit & refactoring accoring to suggestions

* refactor name, calling `generate` throws exception

* Fix CI problems

* Debug failing test

* Couldn't get temp file to work ('only' 30mb)

* change config, remove old test file

* re-add files

* should be `types-requests`

* swap requests with urllib3

* pre-commit changes

* recheck tests

* readd failing line

* Check if both pass without failing test

* Adding test & test data

* Run pre-commit, fix formatting

* still failing black-jupyter linter

* Fix import sorting, formatting

* Remove "end-of-file" hook: unconfigurable to ignore shapefiles

* Pin sonar workflow instead of using master

* mocking get_dataset correctly

* Re adding failing test test_util.test_merge_esmvaltool_datasets

* adjust & run pre-commit

* fixing indent in .pre-commit

* test new generate object

* change path in test

* add link to example notebook

* fix failing pre-commit tests

* issues with tests/setting variables correctly aftere refactor

* re-add failing test

* ensure history is also copied

* final tweaks & changelog

* Update CHANGELOG.md

Co-authored-by: Bart Schilperoort <b.schilperoort@gmail.com>

* catch missing basin_id correctly

Co-authored-by: Bart Schilperoort <b.schilperoort@gmail.com>

* make basin_ids more findable

---------

Co

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,10 @@ repos:
       - id: check-merge-conflict
       - id: debug-statements
       - id: end-of-file-fixer
+        exclude:
+          (?x)^(
+                 tests/src/base/forcing_files/camels_03439000.*
+              )$
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
   - repo: https://github.com/adrienverge/yamllint
