--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,11 @@ Documentation = "https://ewatercycle.readthedocs.io/"
 Homepage = "https://www.ewatercycle.org/"
 "Source Code" = "https://github.com/eWaterCycle/ewatercycle"
 
+[tool.hatch.build]
+exclude = [
+  "tests", "docs"
+]
+
 [tool.isort]
 profile = "black"
 multi_line_output = 3
@@ -110,4 +115,6 @@ testpaths = ["tests"]
 [tool.mypy]
 plugins = ["pydantic.mypy"]
 ignore_missing_imports = true
-files = ["src", "tests"]
+warn_unused_ignores = true
+check_untyped_defs = true
+files = ["src"]
