--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -17,6 +17,7 @@ jobs:
         uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: conda-lock.yml
+          environment-name: ci
           cache-environment: true
           init-shell: bash
       - name: Install dependencies
