--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -28,6 +28,7 @@ jobs:
         uses: pre-commit/action@v2.0.3
       - name: Check typings with mypy
         run: mypy
+        shell: bash -l {0}
       - name: Tests with coverage
         run: |
           pytest --cov --cov-report term --cov-report xml \
