--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,9 +15,10 @@ repos:
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
   - repo: https://github.com/adrienverge/yamllint
-    rev: "v1.29.0"
+    rev: "v1.35.1"
     hooks:
       - id: yamllint
+        exclude: conda-lock.yml
   - repo: https://github.com/psf/black
     rev: "22.3.0"
     hooks:
