Switched to hatch + deleted unneeded setup.cfg and setup.py (#443)
* Switched to hatch + deleted unneeded setup.cfg and setup.py

* Make pyproject.toml valid + add sections not migrated by hatch

Skipped flake8 config as this will be replaced by ruff

* Remove docs and test from sdist + mypy stricter and fix

* Move mypy from precommit to ci + remove pyroma as it is not useful anymore

* Use shell for mypy

* Tell pytest coverage what to cover

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -25,6 +25,9 @@ jobs:
           pip3 install -e .[dev]
       - name: Run pre commit hooks like linters and black formatter
         uses: pre-commit/action@v2.0.3
+      - name: Check typings with mypy
+        run: mypy
+        shell: bash -l {0}
       - name: Tests with coverage
         run: |
           pytest --cov --cov-report term --cov-report xml \
