--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,6 @@ jobs:
       - name: Test with pytest
         run: pytest
         shell: bash -l {0}
+      - name: Build
+        run: python -m build
+        shell: bash -l {0}
