--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -25,8 +25,10 @@ jobs:
         run: |
           pip3 install -e .[dev]
       # TODO we should run non-ruff hooks from pre-commit here?
-      - name: Run Ruff
+      - name: Lint
         run: ruff check --output-format=github .
+      - name: Check format
+        run: ruff format --check
       - name: Check typings with mypy
         run: mypy
         shell: bash -l {0}
