--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         shell: bash -l {0}
         run: |
-          pip3 install -e .[dev]
+          pip3 install -e .[dev] build
       - name: Test with pytest
         run: pytest
         shell: bash -l {0}
