--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-      fail-fast: false
-    name: Run tests in conda environment ${{ matrix.python-version }}
+    name: Run tests in conda environment
     steps:
       - uses: actions/checkout@v3
       - uses: mamba-org/setup-micromamba@v1
