Replace environment.yml with conda-lock.yml (#442)
* Replace environment.yml with conda-lock.yml

TODO
* [ ] valid pyproject.toml for `pip install -e .[dev]`

* Configure conda-lock in pyproject.toml

Currently pip does not understand pyproject.toml file

* Switched to hatch + deleted unneeded setup.cfg and setup.py

* Make pyproject.toml valid + add sections not migrated by hatch

Skipped flake8 config as this will be replaced by ruff

* Remove esmvaltool as python dep

* Remove docs and test from sdist + mypy stricter and fix

* Move mypy from precommit to ci + remove pyroma as it is not useful anymore

* Move mypy from precommit to ci + remove pyroma as it is not useful anymore

* Use lock in ci

* Add env name to ci

* Use shell for mypy

* Use shell for mypy

* Exclude lock from lint

* Use lock in docs

* Typo

* No longer need MANIFEST.in

* Exclude dev deps during install

Unable to exclude during lock generation as `--no-dev-dependencies` moves dev deps to main cat.

* Use lock file to install dev deps

* Remove unused dependencies

* Add osx-64 + lock grpc4bmi deps

* Regenerate lock file

* Add missing fsspec dep

* changelog entry

* Add cartopy as dep

Because it is imported in this package

* Give nicer error when esmvaltool/esmvalcore package can not be found

* Use custom error

* Add test for ESMValToolNotFoundError

* Use importlib from standard library

* On ci use python version that is in lock file

* Group importlib with other standard libs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-      fail-fast: false
-    name: Run tests in conda environment ${{ matrix.python-version }}
+    name: Run tests in conda environment
     steps:
       - uses: actions/checkout@v3
       - uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: environment.yml
+          environment-file: conda-lock.yml
+          environment-name: ci
           cache-environment: true
           init-shell: bash
       - name: Install dependencies
