--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,7 +126,7 @@ source = ["src"]
 testpaths = ["tests"]
 
 [tool.mypy]
-plugins = ["pydantic.mypy"]
+plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
 ignore_missing_imports = true
 warn_unused_ignores = true
 check_untyped_defs = true
@@ -135,6 +135,9 @@ files = ["src"]
 [tool.ruff]
 target-version = "py310"
 extend-include = ["*.ipynb"]
+
+[tool.ruff.lint]
+select = ["A", "E4", "E7", "E9", "F"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
