--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,7 +137,10 @@ target-version = "py310"
 extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
-select = ["A", "E4", "E7", "E9", "F"]
+select = ["A", "ARG", "E4", "E7", "E9", "F"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*" = ["ARG"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
