--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,10 +137,13 @@ target-version = "py310"
 extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
-select = ["A", "ARG", "E4", "E7", "E9", "F"]
+select = ["A", "ARG", "B", "E4", "E7", "E9", "F"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/**/*" = ["ARG"]
+"tests/**/*" = [
+    # Fixtures can be unused
+    "ARG"
+]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
