--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,12 +137,12 @@ target-version = "py310"
 extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
-select = ["A", "ARG", "B", "C", "D", "E", "F"]
+select = ["A", "ARG", "B", "C", "D", "DTZ", "E", "F"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*" = [
-    # Fixtures can be unused, undocumented, wide
-    "ARG", "D", "E501"
+    # Fixtures can be unused, undocumented, wide, tz less
+    "ARG", "D", "E501", "DTZ001"
 ]
 "docs/**/*.ipynb" = [
     # Allow wide lines in notebooks
