--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,7 +137,12 @@ target-version = "py310"
 extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
-select = ["A", "ARG", "B", "C", "D", "DTZ", "E", "EM", "F", "RUF"]
+select = [
+    "A", "ARG", "B", "C", "D", "DTZ", "E", "EM", "F",
+    # TODO enable FBT and factor out booleans args to seperate functions
+    # "FBT",
+    "RUF"
+]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*" = [
