--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,26 +138,73 @@ extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
 select = [
-    "A", "ARG", "B", "C", "D", "DTZ", "E", "EM", "F",
+    "A",
+    # TODO enable ANN and make code more typed
+    # "ANN",
+    "ARG",
+    "B",
+    "BLE",
+    "C",
+    "D",
+    "DTZ",
+    "E",
+    "EM",
+    "ERA",
+    "F",
     # TODO enable FBT and factor out booleans args to seperate functions
     # "FBT",
-    "I", "ICN", "ISC", "N", "PLC", "PLE", "PLR", "PLW", "Q",
+    "FURB",
+    "I",
+    "ICN",
+    "ISC",
+    "LOG",
+    "N",
+    # TODO enable NPT and use modern random
+    # "NPY",
+    "PD",
+    "PERF",
+    "PGH",
+    "PLC",
+    "PLE",
+    # TODO enable PLR and make code less complex
+    # "PLR",
+    # TODO enable PT for tests/**
+    # "PT",
+    "PTH",
+    "PLW",
+    "Q",
+    "RET",
+    "RSE",
     "RUF",
-    "S", "T","TID", "UP", "W", "YTT"
+    "S",
+    "SLOT",
+    "SIM",
+    "T",
+    "TCH",
+    "TID",
+    "TRY",
+    "UP",
+    "W",
+    "YTT"
 ]
 ignore = [
     # Conflicts with formatting
     "ISC001",
+    # Conflicts with default rules
+    "PLC0414",
+    # Misidentifies xarrary.DataArray as pandas.DataFrame
+    "PD003",
 ]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*" = [
-    # Fixtures can be unused, undocumented, wide, tz less, relaxed func naming
-    "ARG", "D", "E501", "DTZ001", "N802"
+    "ARG", "ANN", "D", "E501", "DTZ001", "N802", "S101", "S108", "PLR2004"
 ]
 "docs/**/*.ipynb" = [
     # Allow wide lines in notebooks
-    "E501"
+    "E501",
+    # Allow prints
+    "T201",
 ]
 
 [tool.ruff.lint.pydocstyle]
